--- a/backpack/backpack.ipynb
+++ b/backpack/backpack.ipynb
@@ -1918,7 +1918,15 @@
     "rmse_scores = []\n",
     "mae_scores = []\n",
     "oof_preds = np.zeros(len(train_combined))\n",
-    "test_preds_cb = np.zeros(len(test_combined))"
+    "test_preds_cb = np.zeros(len(test_combined))\n",
+    "\n",
+    "# Store feature importances\n",
+    "feature_importance_list = np.zeros(train_combined.shape[1])\n",
+    "\n",
+    "# Perfome K-Fold Cross Validation\n",
+    "print(\"Training using Cross-Validation\")\n",
+    "for fold, (train_idx, val_idx) in enumerate(kf.split(train_combined)):\n",
+    "  print(f\"\\nTrainng Fold {fold+1}\")"
    ]
   }
  ],
