--- a/backpack/backpack.ipynb
+++ b/backpack/backpack.ipynb
@@ -1926,7 +1926,19 @@
     "# Perfome K-Fold Cross Validation\n",
     "print(\"Training using Cross-Validation\")\n",
     "for fold, (train_idx, val_idx) in enumerate(kf.split(train_combined)):\n",
-    "  print(f\"\\nTrainng Fold {fold+1}\")"
+    "  print(f\"\\nTrainng Fold {fold+1}\")\n",
+    "  X_train, X_val = train_combined.iloc[train_idx], train_combined.iloc[val_idx]\n",
+    "  y_train, y_val = y.iloc[train_idx], y.iloc[val_idx]\n",
+    "  \n",
+    "  # Define model\n",
+    "  cb_model = cb.CatBoostRegressor(**catboost_params)\n",
+    "  \n",
+    "  # Train model\n",
+    "  cb_model.fit(X_train, y_train, eval_set=(X_val, y_val), early_stopping_rounds=50, verbose=0)\n",
+    "  \n",
+    "  # Predict on validation set\n",
+    "  val_preds_cb = cb_model.predict(X_val)\n",
+    "  oof_preds[val_idx] = val_preds_cb"
    ]
   }
  ],
