--- a/backpack/backpack.ipynb
+++ b/backpack/backpack.ipynb
@@ -1938,7 +1938,21 @@
     "  \n",
     "  # Predict on validation set\n",
     "  val_preds_cb = cb_model.predict(X_val)\n",
-    "  oof_preds[val_idx] = val_preds_cb"
+    "  oof_preds[val_idx] = val_preds_cb\n",
+    "  \n",
+    "  # Calculate and store scores\n",
+    "  rmse = np.sqrt(mean_squared_error(y_val, val_preds_cb))\n",
+    "  mae = mean_absolute_error(y_val, val_preds_cb)\n",
+    "  rmse_scores.append(rmse)\n",
+    "  mae_scores(mae)\n",
+    "  \n",
+    "  print(f\"Fold {fold+1} RMSE: {rmse:.4f}, MAE: {mae:.4f}\")\n",
+    "  \n",
+    "  # Accumulate feature importances\n",
+    "  feature_importance_list += cb_model.get_feature_importance() / kf.get_n_splits()\n",
+    "  \n",
+    "  # Predict on test data and average across folds\n",
+    "  test_preds_cb += cb_model.predict(test_combined) / kf.get_n_splits"
    ]
   }
  ],
@@ -1958,7 +1972,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.3"
   },
   "orig_nbformat": 4
  },
