--- a/backpack/backpack.ipynb
+++ b/backpack/backpack.ipynb
@@ -1954,6 +1954,21 @@
     "  # Predict on test data and average across folds\n",
     "  test_preds_cb += cb_model.predict(test_combined) / kf.get_n_splits"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Final evaluation\n",
+    "cv_rmse = np.mean(rmse_scores)\n",
+    "cv_mae = np.mean(mae_scores)\n",
+    "\n",
+    "print(\"\\nCross-Validation Results:\")\n",
+    "print(f\"Mean RMSE: {cv_rmse:.4f}\")\n",
+    "print(f\"Mean MAE: {cv_mae:.4f}\")"
+   ]
   }
  ],
  "metadata": {
@@ -1972,7 +1987,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
