--- a/backpack/backpack.ipynb
+++ b/backpack/backpack.ipynb
@@ -1967,7 +1967,18 @@
     "\n",
     "print(\"\\nCross-Validation Results:\")\n",
     "print(f\"Mean RMSE: {cv_rmse:.4f}\")\n",
-    "print(f\"Mean MAE: {cv_mae:.4f}\")"
+    "print(f\"Mean MAE: {cv_mae:.4f}\")\n",
+    "\n",
+    "# Plot RMSE per fold if needed\n",
+    "if len(rmse_scores) > 1:\n",
+    "  plt.figure(figsize=(8, 5))\n",
+    "  plt.plot(range(1, len(rmse_scores) + 1), rmse_scores, marker='o', linestyle='--', color=\"b\", label=\"RMSE per Fold\")\n",
+    "  plt.axhline(y=cv_rmse, color=\"r\", linestyle=\"-\", label=f\"Avg RMSE: {cv_rmse:.4f}\")\n",
+    "  plt.xlabel(\"Fold\")\n",
+    "  plt.ylabel(\"RMSE\")\n",
+    "  plt.title(\"RMSE per Fold\")\n",
+    "  plt.legend()\n",
+    "  plt.show()"
    ]
   }
  ],
